--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,15 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <name>org.paumard::more-spliterators</name>
+
+    <description>
+        More Spliteratos is a set of operations written on Java 8 Streams. It allows several basic operations that
+        are not available in the the Java 8, and that have proven to be very useful in some cases.
+    </description>
+
+    <url>http://github.com/JosePaumard/more-spliterators</url>
+
     <groupId>org.paumard</groupId>
     <artifactId>more-spliterators</artifactId>
     <version>0.1-SNAPSHOT</version>
@@ -17,15 +26,12 @@
         <assertj.version>3.1.0</assertj.version>
     </properties>
 
-    <url>http://github.com/jose-paumard/more-spliterators</url>
-
     <inceptionYear>2015</inceptionYear>
 
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
         </license>
     </licenses>
 
@@ -34,9 +40,9 @@
     </prerequisites>
 
     <scm>
-        <connection>scm:git:https://github.com/jose-paumard/more-spliterators.git</connection>
-        <developerConnection>scm:git:git@github.com:jose-paumard/more-spliterators.git</developerConnection>
-        <url>https://github.com/jose-paumard/more-spliterators</url>
+        <connection>scm:git:https://github.com/JosePaumard/more-spliterators.git</connection>
+        <developerConnection>scm:git:git@github.com:JosePaumard/more-spliterators.git</developerConnection>
+        <url>https://github.com/JosePaumard/more-spliterators</url>
     </scm>
 
     <developers>
@@ -72,15 +78,80 @@
 
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.3</version>
-            </plugin>
-        </plugins>
-    </build>
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.10.3</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.5</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!--
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.3</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>ossrh</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+                    -->
+                </plugins>
+            </build>
+
+        </profile>
+    </profiles>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
 
 </project>
